modifica di toList() in collect(Collectors.toList())